--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-elements": "^2.0.1",
     "react-native-navigation": "^6.7.1",
     "react-native-vector-icons": "^6.6.0",
+    "readable-stream": "^3.6.0",
     "sockjs": "^0.3.20",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3"
@@ -26,6 +27,7 @@
     "@babel/runtime": "^7.10.2",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^26.0.1",
+    "babel-plugin-rewrite-require": "^1.14.5",
     "eslint": "^7.1.0",
     "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.59.0",
